--- a/index.html
+++ b/index.html
@@ -11,28 +11,20 @@
 <body>
   <div class="header">
     <div class="header_inner">
-      <div class="header_left">
-        <h2>COACHTECH</h2>
-      </div>
-      <div class="header_right">
-        <ul>
-          <li>ホーム</li>
-          <li>事業内容</li>
-          <li>採用情報</li>
-          <li>お問い合わせ</li>
-        </ul>
-      </div>
+      <h2 class="header_left">COACHTECH</h2>
+      <ul class="header_right">
+        <li>ホーム</li>
+        <li>事業内容</li>
+        <li>採用情報</li>
+        <li>お問い合わせ</li>
+      </ul>
     </div>
   </div>
   <div class="main">
     <div class="main_inner">
-      <div class="image">
-        <img src="img/firstview.jpeg" alt="">
-      </div>
+      <img src="img/firstview.jpeg" alt="image">
       <div class="title">
-        <div class="title_letter">
-          <p>毎日を笑顔に</p>
-        </div>
+        <p class="title_letter">毎日を笑顔に</p>
         <div class="title_color">
         </div>
       </div>
