--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
   <title>COACHTECH</title>
 </head>
 <body>
-  <div class="header">
+  <header class=".header">
     <div class="header_inner">
       <h2 class="header_left">COACHTECH</h2>
-      <ul class="header_right">
-        <li>ホーム</li>
-        <li>事業内容</li>
-        <li>採用情報</li>
-        <li>お問い合わせ</li>
-      </ul>
+      <nav class="header_right">
+        <ul>
+          <li>ホーム</li>
+          <li>事業内容</li>
+          <li>採用情報</li>
+          <li>お問い合わせ</li>
+        </ul>
+      </nav>
     </div>
-  </div>
-  <div class="main">
+  </header>
+  <main class="main">
     <div class="main_inner">
       <img src="img/firstview.jpeg" alt="image">
       <div class="title">
@@ -29,6 +31,6 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </body>
 </html>
